fixed header centering but its not responsive

--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -43,6 +43,8 @@
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  max-width: 13%;
+  width: 100%;
 }
 
 .dropDownMenuTriangle {
@@ -110,6 +112,7 @@
 }
 
 .userProfileContainer {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
